--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,53 +1,3 @@
-/*@media (max-width: 480px) {
-
-  h1{
-    Font-size: 150px;
-    color: red;
-  }
- }
-
-@media (min-width: 480px) {
-
-  h1{
-    Font-size: 150px;
-    color: green;
-  }
-
-  p{
-
-  	color: blue!important;
-
-  }
- }
-
-@media (min-width: 600px) {
-
-  
-
-  p{
-
-  	color: pink;
-
-  }
- }
-*/
-/*largo 25% del total del contenedor*/
- /*section{
-	width: 100%;
-}
-
-.wid-25{
-	width: calc(25% - 40px);
-	background: blue;
-	float: left;
-	padding: 10px;
-	margin: 10px;
-
-
-}
-
- */
-
  @media (max-width: 480px) {
 
   .fs-xs-20{
@@ -61,7 +11,7 @@
   }
  }
 
-  
+ 
 
 /*/*****************************************************************************
 // clases Útiles
@@ -81,15 +31,66 @@
   overflow: hidden;
 }
 
+.margin-t-b-10{
+
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.margin-t-b-20{
+
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.margin-t-b-50{
+
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.margin-t-50{
+
+  margin-top: 50px;
+}
+
 .padding-t-b-50{
 
   padding-top: 50px;
   padding-bottom: 50px;
 }
 
+.no-padding{
+  padding: 0!important;
+}
+
 .line-height-small{
   line-height: 25px;
 }
+
+.input-opacity-05{
+  opacity: 0.5;
+  color: #000;
+  background: #FFF;
+  border-color: #FFF;
+}
+
+.input-opacity-05:focus{
+  opacity: 0.8;
+}
+
+.transition-all{
+  /*prefijos para IE*/
+  -webkit-transition: all 0.3s ease-in-out;
+  /*prefijos para MOZILLA*/
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.text-center{
+  text-align: center;
+}
+
 
 
 /*/*****************************************************************************
@@ -102,7 +103,7 @@
   width: 100%;
   height: 100%;
   background: #000;
-  opacity: 0.7;
+  opacity: 0.6;
   overflow: hidden;
 }
 
@@ -130,6 +131,12 @@
 
 .container-padding-medium{
    padding: 100px 200px 100px 200px;
+
+}
+
+.container-padding-small{
+   padding: 100px 50px 100px 50px;
+
 }
 
 @media (max-width: 768px) {
@@ -139,6 +146,61 @@
   }
 }
 
+.bg-image-contact{
+
+  height: 100%;
+  background: url(../img/pic3.jpg);
+  background-size: cover;
+  position: relative;
+}
+
+#footer{
+
+  padding: 50px 100px 50px 100px;
+  background: #403F3B;
+}
+
+@media (max-width: 768px) {
+
+  #footer{
+     padding: 50px 20px 50px 20px;
+  }
+}
+
+.icon-social{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: #fff;
+  display: inline-block;
+  text-align: center;
+  line-height: 90px;
+  font-size: 40px;
+  border: 10px solid;
+  box-shadow: 0 0 0 5px #fff;
+  color: #403F3B;
+  cursor: pointer;
+
+  border: 5px solid #ADACA9;
+  box-shadow: 0 0 0 5px rgb(205, 204, 201);
+
+
+}
+
+.icon-social:hover{
+  background: #403F3B;
+  color: #fff;
+
+  border: 7px solid #ADACA9;
+  box-shadow: 0 0 0 7px rgb(205, 204, 201);
+
+
+}
+
+.my-icon-heart{
+  color: #e74c3c;
+  font-size: 14px!important;
+}
 
 
 
@@ -152,17 +214,13 @@
   .container-header{
     padding: 100px 100px 100px 100px;
   }
-
-  .img-background{
-    margin: -200px
-  }
   
 }
 
 @media (max-width: 768px) {
 
-  .img-background{
-    margin-left: -350px;
+  #header-landing{
+    background-position: -50px;
 
   }
 
@@ -184,8 +242,8 @@
     font-size: 30px!important;
   }
 
-  .img-background{
-   margin-left: -450px;
+  #header-landing{
+   background-position: -250px;
   }
   
 }
@@ -201,6 +259,14 @@
   font-size: 50px;
 }
 
+.fs-12{
+  font-size: 12px;
+}
+
+.fs-10{
+  font-size: 10px;
+}
+
 
 /*/*****************************************************************************
 // Colores
@@ -212,4 +278,164 @@
 
 .bg-silver{
   background: silver;
+}
+
+.bg-gradient-blue{
+
+  background-image: -webkit-linear-gradient(right top, #337ab7  30%, #3cd27b 100%);
+  background-image: linear-gradient(to left bottom, #337ab7  30%, #3cd27b 100%); }
+}
+
+
+/*/*****************************************************************************
+// Iconos personales
+// *****************************************************************************/
+
+@font-face{
+  font-family: 'MaterialDesignIcons';
+  src: url("../fonts/materialdesignicons-webfont.eot?v=0.9.21");
+  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=0.9.21") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=0.9.21") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=0.9.21") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=0.9.21") format("truetype"), url("../fonts/materialdesignicons-webfont.svg?v=0.9.21#materialdesigniconsregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.my-icon {
+  display: inline-block;
+  font: normal normal normal 24px/1 MaterialDesignIcons;
+  font-family: 'MaterialDesignIcons'!important;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  transform: translate(0, 0);
+
+  /*prefijos para IE*/
+  -webkit-transition: all 0.3s ease-in-out;
+  /*prefijos para MOZILLA*/
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.my-icon-facebook:before{
+  content: "\f258";
+}
+
+.my-icon-facebook:before{
+  content: "\f258";
+}
+
+.my-icon-twitter::before {
+  content: "\f44e";
+}
+
+.my-icon-instagram::before {
+  content: "\f2ed";
+}
+
+.my-icon-youtube-play::before {
+  content: "\f498";
+}
+
+.my-icon-thumb-up::before {
+  content: "\f429";
+}
+
+.my-icon-heart::before {
+  content: "\f2ca";
+}
+
+
+/*/*****************************************************************************
+// Animaciones
+// *****************************************************************************/
+
+@-webkit-keyframes hearthbeat {
+  from {
+    -webkit-transform: scale(1);
+  }
+
+  0% {
+    -webkit-transform: scale(1.2);
+  }
+
+  50% {
+    -webkit-transform: scale(0.8);
+  }
+
+  50% {
+    -webkit-transform: scale(1);
+  }
+
+  to {
+    -webkit-transform: scale(1.4);
+  }
+}
+@-moz-keyframes hearthbeat {
+  from {
+    -moz-transform: scale(1);
+  }
+
+  0% {
+    -moz-transform: scale(1.2);
+  }
+
+  50% {
+    -moz-transform: scale(0.8);
+  }
+
+  50% {
+    -moz-transform: scale(1);
+  }
+
+  to {
+    -moz-transform: scale(1.4);
+  }
+}
+@-o-keyframes hearthbeat {
+  from {
+    -o-transform: scale(1);
+  }
+
+  0% {
+    -o-transform: scale(1.2);
+  }
+
+  50% {
+    -o-transform: scale(0.8);
+  }
+
+  50% {
+    -o-transform: scale(1);
+  }
+
+  to {
+    -o-transform: scale(1.4);
+  }
+}
+@keyframes hearthbeat {
+  from {
+    transform: scale(1);
+  }
+
+  0% {
+    transform: scale(1.2);
+  }
+
+  50% {
+    transform: scale(0.8);
+  }
+
+  50% {
+    transform: scale(1);
+  }
+
+  to {
+    transform: scale(1.4);
+  }
+}
+
+.hearth-beat {
+  -webkit-animation: hearthbeat 1s infinite linear;
+  -moz-animation: hearthbeat 1s infinite linear;
+  animation: hearthbeat 1s infinite linear;
 }
