--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -101,9 +101,15 @@
   margin-top: 50px;
 }
 
+
 .padding-t-b-50{
 
   padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.padding-b-50{
+
   padding-bottom: 50px;
 }
 
@@ -205,6 +211,14 @@ html,body{
   position: relative;
 }
 
+.bg-image-team{
+
+  height: 100%;
+  background: url(../img/pic1.jpg);
+  background-size: cover;
+  position: relative;
+}
+
 #footer{
 
   padding: 50px 100px 50px 100px;
@@ -253,10 +267,43 @@ html,body{
 .icon-down{
   font-size: 20px!important;
   border-radius: 50%;
-  width: 80px;
-  height: 80px;
+  width: 60px;
+  height: 60px;
   border: 1px solid #fff;
   cursor: pointer;
+}
+
+.profile-container-card{
+
+  width: 18%;
+  float: left;
+  margin: 1%
+
+}
+
+.team-caption{
+  min-height: 130px;
+}
+
+
+@media (max-width: 480px) {
+
+  .profile-container-card{
+
+    width: 98%;
+
+  }
+  
+}
+
+@media (min-width: 480px) and (max-width: 768px){
+
+  .profile-container-card{
+
+    width: 31%;
+
+  }
+  
 }
 
 
@@ -291,7 +338,7 @@ html,body{
 @media (max-width: 480px) {
 
   .container-header{
-    padding: 50px;
+    padding: 25px;
   }
 
   .fs-xs-30{
@@ -322,6 +369,12 @@ html,body{
 
 .fs-10{
   font-size: 10px;
+}
+
+.fs-16{
+
+  font-size: 16px!important;
+
 }
 
 
@@ -377,8 +430,8 @@ html,body{
   content: "\f258";
 }
 
-.my-icon-facebook:before{
-  content: "\f258";
+.my-icon-google-plus:before{
+  content: "\f2be";
 }
 
 .my-icon-twitter::before {
